-lagt till beskrivning i grupper för databas -påbörjat visning/möjlighet att ansöka för att gå med i grupp

--- a/Systemet/Systemet.csproj
+++ b/Systemet/Systemet.csproj
@@ -240,6 +240,10 @@
     <Compile Include="Migrations\201705262155430_hela namnet.Designer.cs">
       <DependentUpon>201705262155430_hela namnet.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201705301151404_grupp beskrivning.cs" />
+    <Compile Include="Migrations\201705301151404_grupp beskrivning.Designer.cs">
+      <DependentUpon>201705301151404_grupp beskrivning.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Evenemang.cs" />
     <Compile Include="Models\EvenemangsKommentarer.cs" />
@@ -555,6 +559,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201705262155430_hela namnet.resx">
       <DependentUpon>201705262155430_hela namnet.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201705301151404_grupp beskrivning.resx">
+      <DependentUpon>201705301151404_grupp beskrivning.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
