--- a/Systemet/Systemet.csproj
+++ b/Systemet/Systemet.csproj
@@ -274,6 +274,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\Systemet.Models.OurDBContext.mdf" />
+    <Content Include="App_Data\Systemet.Models.OurDBContext_log.ldf">
+      <DependentUpon>Systemet.Models.OurDBContext.mdf</DependentUpon>
+    </Content>
     <Content Include="Content\agenda.css" />
     <Content Include="Content\awesomplete.css" />
     <Content Include="Content\bootstrap-theme.css" />
@@ -509,7 +513,6 @@
     <Content Include="Views\GruppFörfrågan\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
     <Folder Include="Bilder\" />
   </ItemGroup>
   <ItemGroup>
